# control-pulp

./: .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  Bender.yml  CHANGELOG.md  Makefile  README.md  boot.scr  cp.flist  vivado.jou
.github/workflows/: gitlab-ci.yml
.gitlab/issue_templates/: issue_default.md
.gitlab/merge_request_templates/: mr_default.md
boot/: .gitignore  LICENSE.zforth  Makefile  boot_code.objdump  boot_code_fpga.objdump  crt0.S  gen_rom.py  kk_srec.c  kk_srec.h  link.ld  s19toboot.py
boot/zforth/: zforth.c  zforth.h
boot/zforth-riscv/: zfconf.h  zforth-main.c
env/: check_environment.sh  env.sh  exilzcu102.sh
fpga/: .gitignore  Makefile  README.md  vivado_pid278500.str
fpga/control_pulp-txilzu9eg/: .gitignore  Makefile  board  fpga-settings.mk  vivado_pid22346.str  vivado_pid528259.str
fpga/control_pulp-txilzu9eg/constraints/: zcu102_peripherals.xdc  zcu102_timing.xdc
fpga/control_pulp-txilzu9eg/rtl/: fpga_autogen_rom.sv  fpga_clk_gen.sv  fpga_slow_clk_gen.sv  fpga_system_clk_rst_gen.sv  pad_frame_fpga.sv  pms_top_fpga.v
fpga/control_pulp-txilzu9eg/tcl/: control_pulp_exilzcu102.tcl  zcu102_pins_bd.tcl
fpga/linux/: .gitignore  Config.in  external.desc  external.mk
fpga/linux/configs/: har_exilzcu102_defconfig
fpga/linux/mhu_test/: Makefile  mhu_test.cc  setspeed.c
fpga/linux/package/: Config.in
fpga/linux/petalinux/: .gitignore  zcu102.sh
fpga/linux/pmsctl/: .gitignore  Makefile  boot.scr  pmsctl.cc  scmictl.cc
fpga/linux/pmsrst/: Makefile  pmsrst  pmsrst.c
fpga/linux/xsdb/: boot_jtag.sh  install_tftp_nfs_rootfs.sh  reset_jtag.sh
fpga/output/: .gitignore
fpga/toolchain/: build.sh  har-olinux.config
hw/: serial_link.hjson
hw/includes/: control_pulp_assign.svh  periph_bus_defines.sv  pulp_soc_defines.sv  soc_mem_map.svh
hw/ips/axi2mem/: Bender.yml  axi2mem.sv
hw/ips/axi_apb_i2c_slave/: Bender.yml  README.md  src_files.yml
hw/ips/axi_scmi_mailbox/: Bender.yml  Makefile  scmi.h  scmi.hjson  scmi.hjson.tpl
hw/ips/axi_scmi_mailbox_old/: Bender.yml  scmi.hjson
hw/ips/axi_spi_slave/: Bender.yml  axi_spi_slave.sv  spi_slave_axi_plug.sv  spi_slave_tx.sv
hw/ips/wdt/: .gitignore  .gitlab-ci.yml  Bender.yml  CHANGELOG.md  README.md  src_files.yml
hw/pkg/: Bender.yml  control_pulp_pkg.sv  pms_top_pkg.sv
hw/pulp/: README.md  cluster_domain.sv  control_pulp.sv  control_pulp_fpga.sv  jtag_tap_top.sv  pad_control.sv  pad_frame_top.sv  pms_top.sv  pms_top_fpga_behav.sv  soc_domain.sv  system_clk_rst_gen.sv
setup/: vsim.sh
sim/: .gitignore
sim/boot/: boot_code.cde
sim/tcl_files/: export_run.tcl  run.tcl
sim/tcl_files/config/: export_all.tcl  run_and_exit.tcl  vsim.tcl
sim/waves/: avs.tcl  clic.tcl  core.tcl  dm.tcl  dmi_jtag.tcl  fc.tcl  software.tcl
sw/: README.md
sw/pulp-runtime/scripts/: bwruntests.py
sw/tests/control-pulp-tests/: .gitignore  CHANGELOG.md  README.md  control-pulp-tests.yaml  testset.cfg
sw/tests/rust-tests/: .gitignore  README.md  link.ld  memory.ld
sw/tests/rust-tests/atomics/: Cargo.toml  Makefile
sw/tests/rust-tests/atomics/.cargo/: config
sw/tests/rust-tests/atomics/src/: main.rs
sw/tests/rust-tests/interrups/: Cargo.toml  Makefile
sw/tests/rust-tests/interrups/.cargo/: config
sw/tests/rust-tests/interrups/src/: main.rs
sw/tests/rust-tests/mnxti-bare-metal/: Cargo.toml  Makefile
sw/tests/rust-tests/mnxti-bare-metal/.cargo/: config
sw/tests/rust-tests/mnxti-bare-metal/src/: main.rs
sw/tests/rust-tests/rtic-periodic/: Cargo.toml  Makefile  memory.x
sw/tests/rust-tests/rtic-periodic/src/: main.rs
sw/tests/rust-tests/rtic-realistic-workload/: Cargo.toml  Makefile
sw/tests/rust-tests/rtic-realistic-workload/src/: main.rs
sw/tests/rust-tests/rtic-timer/: Cargo.toml  Makefile
sw/tests/rust-tests/rtic-timer/src/: main.rs
sw/tests/rust-tests/rtic_task_preemption/: Cargo.toml  Makefile
sw/tests/rust-tests/rtic_task_preemption/src/: main.rs
sw/tests/rust-tests/timer/: Cargo.toml  Makefile
sw/tests/rust-tests/timer/.cargo/: config.toml
sw/tests/rust-tests/timer/src/: main.rs
tb/: README.md  avs_pkg.sv  control_pulp_compliance_test.cfg  control_pulp_debug.cfg  doorbell.sv  fixture_pms_top.sv  i2c_pkg.sv  jtag_pkg.sv  pulp_tap_pkg.sv  tb_acpi.sv  tb_axi_slv.sv  tb_bootrom.sv  tb_clic_prio_semantic.sv  tb_clk_gen.sv  tb_dm.sv  tb_fw.sv  tb_i2c_slv_dump.sv  tb_i2c_slv_irq.sv  tb_pad_frame_top.sv  tb_pms_minimal.sv  tb_scmi_doorbell_b2b.sv  tb_scmi_doorbell_conc.sv  tb_sw.sv  tb_sw_axiboot.cpp  tb_sw_jtag.sv  tb_uart_boot.sv
tb/deprecated/: tb_spi_pkg.sv  tb_spi_slv.sv
tb/deprecated/scmi_doorbell_simvectors/: scmi_db_mem_init.mem  scmi_db_mem_init.txt  stim_gen.py
tb/deprecated/spi_slv_test_simvectors/: stim_gen.py  stimuli_aligned.txt  stimuli_aligned_asic.txt  stimuli_unaligned.txt  stimuli_unaligned_asic.txt
tb/dev_dpi/: dev_dpi.sv
tb/fpga/: fixture_pms_top_fpga.sv  tb_acpi_fpga.sv  tb_avs_fpga.sv  tb_i2c_slv_dump_fpga.sv  tb_i2c_slv_irq_fpga.sv  tb_mbox_fpga.sv  tb_sw_fpga.sv
tb/remote_bitbang/: rbs_test.c
tb/simvectors/axi_slv/: axi_slv_stim_gen.py  stimuli_aligned_asic.txt  stimuli_unaligned_asic.txt
tb/simvectors/debug/: debug_freertos.stim  stim.txt
tb/simvectors/fw/: core_bindings.txt  core_bindings_out.txt  freq_to_compare.txt  freq_to_compare_out.txt  fw_stim_gen.py  power_budget.txt  power_budget_out.txt  power_measured.txt  power_measured_out.txt  stimuli_out_epi_model.txt  target_freq.txt  target_freq_out.txt  temperature.txt  temperature_out.txt  wl_measure.txt  wl_measure_out.txt
tb/simvectors/minimal/: stim.txt
tb/srec/: srec_pkg.sv
tb/vip/: README.md  get-vips.sh
tb/vip/i2c_eeprom/: README.md
tb/vip/spi_flash/: README.md
util/: README.md  add-subtree-remote.sh  bender-to-submodules.py  proc_flist.py
util/conv/: bin2carray.py
util/lint/spyglass/: cp_sg.f  func.sgdc  run_sg_lint.tcl
util/verible/: .gitignore  README.md  parse-lint-report.py  rules.vbl
util/verilator/: Makefile
(+267 files in other folders)
