[package]
name = "interrupt_latency"
version = "0.1.0"
edition = "2021"

[dependencies]
pulp-print = {git = "https://github.com/noahzarro/pulp-print.git"}
pulp-device = {git = "https://github.com/noahzarro/pulp-device.git"}
# cortex-m-rtic = { path = "../../../../../risc-v-rtic", features = ["nxti"] }
cortex-m-rtic = { path = "../../../../../risc-v-rtic" }
# cortex-m-rtic-macros = "1.1.5"
numtoa = "0.2.4"
# riscv-rt = { path = "/scratch/msc22h12/working-repos/riscv-rt", features=["clic", "nxti"] }
riscv-rt = { path = "/scratch/msc22h12/working-repos/riscv-rt", features=["clic"] }
riscv-rt-macros = { path = "/scratch/msc22h12/working-repos/riscv-rt/macros" }
# riscv-rt-macros = { path = "/scratch/msc22h12/working-repos/riscv-rt/macros", features = ["nxti"] }
riscv-monotonic = { git = "https://github.com/noahzarro/riscv-monotonic"}
riscv-clic = {git = "https://github.com/noahzarro/riscv-clic.git", features=["critical-section-single-hart", "clic"]}

[features]
timer_measurement = []
nxti = ["cortex-m-rtic/nxti", "riscv-rt/nxti", "riscv-rt-macros/nxti"]