[package]
name = "interrups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
numtoa = "0.2.4"
riscv = "0.9.0"
#riscv-rt = { version = "0.9.0", path = "../../../../../../../home/msc22h12/Temp/riscv-rt" }
#riscv-rt-macros = { version = "0.2.0", path = "../../../../../../../home/msc22h12/Temp/riscv-rt/macros" }
riscv-rt = { git = "https://github.com/noahzarro/riscv-rt", branch = "control-pulp" }
riscv-rt-macros = { git = "https://github.com/noahzarro/riscv-rt", branch = "control-pulp" }
