[package]
name = "rtic-realistic-workload"
version = "0.1.0"
edition = "2021"

[dependencies]
pulp-print = {git = "https://github.com/noahzarro/pulp-print.git"}
pulp-device = {git = "https://github.com/noahzarro/pulp-device.git"}
cortex-m-rtic = { git = "https://github.com/noahzarro/risc-v-rtic.git" }
numtoa = "0.2.4"
riscv-rt = { git = "https://github.com/noahzarro/riscv-rt.git", features=["clic"] }
riscv-rt-macros = { git = "https://github.com/noahzarro/riscv-rt.git" }
riscv-monotonic = { git = "https://github.com/noahzarro/riscv-monotonic"}
riscv-clic = {git = "https://github.com/noahzarro/riscv-clic.git", features=["critical-section-single-hart", "clic"]}

[features]
timer_measurement = []
nxti = ["cortex-m-rtic/nxti", "riscv-rt/nxti", "riscv-rt-macros/nxti"]